test/spec_vectors/unreached-invalid/fail/module_110.wat
(module (func $type-after-ref.as_non_null (unreachable) (ref.as_non_null) (f32.abs)))